--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body {
 .buttongrid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-items: center;
 }
 @media screen and (max-width: 900px){
     .buttongrid{
